// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum CloudresourcemanagerAlphaFolderStateEnum {
  CloudresourcemanagerAlphaFolderStateEnumNO_VALUE_DO_NOT_USE = 0;
  CloudresourcemanagerAlphaFolderStateEnumLIFECYCLE_STATE_UNSPECIFIED = 1;
  CloudresourcemanagerAlphaFolderStateEnumACTIVE = 2;
  CloudresourcemanagerAlphaFolderStateEnumDELETE_REQUESTED = 3;
}

message CloudresourcemanagerAlphaFolder {
  string name = 1;
  string parent = 2;
  string display_name = 3;
  CloudresourcemanagerAlphaFolderStateEnum state = 4;
  string create_time = 5;
  string update_time = 6;
  string delete_time = 7;
  string etag = 8;
}

message ApplyCloudresourcemanagerAlphaFolderRequest {
  CloudresourcemanagerAlphaFolder resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteCloudresourcemanagerAlphaFolderRequest {
  string service_account_file = 1;
  CloudresourcemanagerAlphaFolder resource = 2;
}

message ListCloudresourcemanagerAlphaFolderRequest {
  string service_account_file = 1;
  string Parent = 2;
}

message ListCloudresourcemanagerAlphaFolderResponse {
  repeated CloudresourcemanagerAlphaFolder items = 1;
}

service CloudresourcemanagerAlphaFolderService {
  rpc ApplyCloudresourcemanagerAlphaFolder(ApplyCloudresourcemanagerAlphaFolderRequest) returns (CloudresourcemanagerAlphaFolder);
  rpc DeleteCloudresourcemanagerAlphaFolder(DeleteCloudresourcemanagerAlphaFolderRequest) returns (google.protobuf.Empty);
  rpc ListCloudresourcemanagerAlphaFolder(ListCloudresourcemanagerAlphaFolderRequest) returns (ListCloudresourcemanagerAlphaFolderResponse);
}
